--- a/world.css
+++ b/world.css
@@ -29,137 +29,118 @@ ul {
     
 
 
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans');
-body, html {
-    padding: 0;
-    margin: 0;
-    background: #ececec;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-}
-.picContainer {
-    position: relative;
-    width: 650px;
-    height: 400px;
-    border: 5px solid #262626;
-    background: black;
-    border-radius: 10px;
-    box-shadow: 0px 50px 100px #262626;
-}
-img {
-    width: 650px;
-    height: 400px;
-    transition: 1s;
-}   
-.img {
-    width: 650px;
-    height: 400px;
-    position: absolute;
-    z-index: 0;
-    transition: 1s;
-}
-.right {
-    position: absolute;
-    height: 100%;
-    width: 60px;
-    z-index: 99;
-    cursor: pointer;
-    color: #fff;
-    transition: 1s;
-    right:0;
-    top:0;
-}
-.right:hover{
-    background: rgba(0, 0, 0, 0.25)
-}
-.right:before{
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: "\f105";
-    font-size: 50px;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%) scale(0.75);
-    margin-right: 10px;
-    transition: .5s;
-}
-.right:hover:before{
-     transform: translateY(-50%) scale(1);
-}
-.left {
-    position: relative;
-    height: 100%;
-    width: 60px;
-    z-index: 99;
-    cursor: pointer;
-    color: #fff;
-    transition: 1s;
-}
-.left:hover{
-    background: rgba(0, 0, 0, 0.25)
-}
-.left:before{
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: "\f104";
-    font-size: 50px;
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%) scale(0.75);
-    margin-left: 10px;
-    transition: .5s;
-}
-.left:hover:before{
-     transform: translateY(-50%) scale(1);
-}
-input{
-    position: absolute;
-    top: 0;
-     left: -200px;
-}
-h2 {
-    position: absolute;
-    color: rgba(0, 0, 0, 0.75);
-    top: -160px;
-    left: 55%;
-    transform: translateX(-50%);
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 36px;
-    width: 70%;
-}
-.dot{
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 10px;
-    height: 10px;
-    z-index: 99;
-    background: #333;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: .5s;
-    box-shadow: 0px 0px 5px #000;
-}
-.dot.a1{margin-left:-30px}
-.dot.a2{margin-left:-10px}
-.dot.a3{margin-left:10px}
-.dot.a4{margin-left:30px}
-.dot.a1:hover{background:#fff}
-.dot.a2:hover{background:#fff}
-.dot.a3:hover{background:#fff}
-.dot.a4:hover{background:#fff}
+@import url(https://fonts.googleapis.com/css?family=Varela+Round);
 
-#info {
+html, body  { background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
+
+
+.slides {
+    padding: 0;
+    width: 1200px;
+    height: 1500px;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+}
+
+.slides * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+
+.slides input { display: none; }
+
+.slide-container { display: block; }
+
+.slide {
+    top: 0;
+    opacity: 0;
+    width: 1200px;
+    height: 1500px;
+    display: block;
     position: absolute;
-    top: -65px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 25px;
-    color: rgba(0, 0, 0, 0.75);
+
+    transform: scale(0);
+
+    transition: all .7s ease-in-out;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+}
+
+.nav label {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: absolute;
+
+	  opacity: 0;
+    z-index: 9;
+    cursor: pointer;
+
+    transition: opacity .2s;
+
+    color: #00ff00;
+    font-size: 156pt;
+    text-align: center;
+    line-height: 380px;
+    font-family: "Varela Round", sans-serif;
+    background-color: rgba(255, 255, 255, .3);
+    text-shadow: 0px 0px 15px rgb(119, 119, 119);
+}
+
+.slide:hover + .nav label { opacity: 0.5; }
+
+.nav label:hover { opacity: 1; }
+
+.nav .next { right: 0; }
+
+input:checked + .slide-container  .slide {
+    opacity: 1;
+
+    transform: scale(1);
+
+    transition: opacity 1s ease-in-out;
+}
+
+input:checked + .slide-container .nav label { display: block; }
+
+.nav-dots {
+	width: 100%;
+	bottom: 9px;
+	height: 11px;
+	display: block;
+	position: absolute;
+	text-align: center;
+}
+
+.nav-dots .nav-dot {
+	top: -5px;
+	width: 11px;
+	height: 11px;
+	margin: 0 4px;
+	position: relative;
+	border-radius: 100%;
+	display: inline-block;
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
+.nav-dots .nav-dot:hover {
+	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+input#img-1:checked ~ .nav-dots label#img-dot-1,
+input#img-2:checked ~ .nav-dots label#img-dot-2,
+input#img-3:checked ~ .nav-dots label#img-dot-3,
+input#img-4:checked ~ .nav-dots label#img-dot-4,
+input#img-5:checked ~ .nav-dots label#img-dot-5,
+input#img-6:checked ~ .nav-dots label#img-dot-6 {
+	background: rgba(0, 0, 0, 0.8);
 }
